syntax = "proto3";

package api;

message IsAuthAllowedRequest {
    string login = 1;
    string password = 2;
    string ip = 3;
}

message IsAuthAllowedResponse {
    bool ok = 1;
}

message AuthRequest {
    string login = 1;
    string password = 2;
    string ip = 3;
}

message AuthResponse {
    string token = 1;
}

message AddIpInListRequest {
    string ip = 1;
}

message AddIpInListResponse {}

message DeleteIpFromListRequest {
    string ip = 1;
}

message DeleteIpFromListResponse {}

message IsIpInListRequest {
    string ip = 1;
}

message IsIpInListResponse {
    bool ok = 1;
}

message ClearListRequest {}
message ClearBucketResponse {}

message ResetRateLimiterRequest {
    optional string ip = 1;
    optional string login = 2;
    optional string password = 3;
}

message ResetRateLimiterResponse {}

message HealthCheckRequest{}

message HealthCheckResponse {}

service Api {
    rpc IsAuthAllowed(IsAuthAllowedRequest) returns (IsAuthAllowedResponse) {};
    rpc Auth(AuthRequest) returns (AuthResponse) {};
    rpc AddIpInBlackList (AddIpInListRequest) returns (AddIpInListResponse) {};
    rpc AddIpInWhiteList (AddIpInListRequest) returns (AddIpInListResponse) {};
    rpc DeleteIpFromBlackList (DeleteIpFromListRequest) returns (DeleteIpFromListResponse) {};
    rpc DeleteIpFromWhiteList (DeleteIpFromListRequest) returns (DeleteIpFromListResponse) {};
    rpc IsIpInBlackList (IsIpInListRequest) returns (IsIpInListResponse) {};
    rpc IsIpInWhiteList (IsIpInListRequest) returns (IsIpInListResponse) {};
    rpc ClearBlackList(ClearListRequest) returns (ClearBucketResponse) {};
    rpc ClearWhiteList(ClearListRequest) returns (ClearBucketResponse) {};
    rpc ResetRateLimiter(ResetRateLimiterRequest) returns (ResetRateLimiterResponse) {};
    rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {}
}
